[package]
name = "gtk4-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gtk4 = { version = "0.3.1", features = ["v4_4"]}
# gtk = { version = "0.14.3", features = ["v3_20"]}

gtk = { version = "0.3.1", package = "gtk4", features = ["v4_4"]}
glib = "0.14.8"
gio = "0.14.8"
chrono = "0.4.19"
