[package]
name = "gtk4-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gtk4 = { version = "0.3.1", features = ["v4_4"]}
# gtk = { version = "0.14.3", features = ["v3_20"]}

gtk = { version = "0.5.5", package = "gtk4", features = ["v4_6"]}
glib = "0.16.7"
gio = "0.16.7"
chrono = "0.4.23"
